# rust-actix-web

./: .env example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20241124_151359_create_users_table.rs
src/: db_cli.rs  main.rs
src/entities/: mod.rs  user.rs
src/seeders/: mod.rs  user_seeder.rs
src/services/users/: handlers.rs  mod.rs  model.rs
src/utils/: mod.rs
src/utils/helpers/: password_hash.rs
src/utils/macros/: connect_database.rs  database.rs  handle_cli.rs  healthcheck.rs  mod.rs  routes.rs
